fix: hero height on mobile devices

--- a/app/home/hero/hero.module.scss
+++ b/app/home/hero/hero.module.scss
@@ -9,7 +9,7 @@
   text-align: center;
   // padding: 0 32px;
   // height: 100vh;
-  height: calc(100vh - 100px);
+  height: calc(100svh - 100px);
 
   justify-content: center;
   // max-width: 900px;
@@ -34,6 +34,6 @@
     line-height: getLineHeight(-1);
   }
   .container {
-    height: calc(100vh - 60px);
+    height: calc(100svh - 60px);
   }
 }
